# rust-opencl-experiments

./: .dockerignore  .gitignore  BENCHMARKS.md  Cargo.toml  Dockerfile  README.md
.cargo/: config
.github/workflows/: check.yml
bins/fetch_vectors/: Cargo.toml
bins/fetch_vectors/src/: main.rs
bins/opencl_bf_search/: Cargo.toml
bins/opencl_bf_search/benches/: dot_products.rs
bins/opencl_bf_search/src/: cli.rs  main.rs  memory_chunk.rs  vec_traits.rs  vecgen.rs
bins/opencl_bf_search/src/opencl/: NOTES.md  dot_product.cl  dot_product.rs  dot_product_topk.cl  dot_topk.rs  mod.rs  priority_queue.rs  topk_manual.cl  topk_priority_queue_ext.cl
crates/abstractions/: Cargo.toml
crates/abstractions/src/: alignments.rs  lib.rs  local_id.rs  num_dimensions.rs  num_elements.rs  num_vectors.rs  vecgen.rs
crates/dot_products/: Cargo.toml
crates/dot_products/benches/: reference.rs  reference_dot_products.rs
crates/dot_products/src/: lib.rs  reference.rs  reference_parallel.rs
crates/memchunk/: Cargo.toml
crates/memchunk/src/: alignments.rs  any_size_memory_chunk.rs  chunk_index.rs  chunk_manager.rs  chunk_vector.rs  dot_product.rs  errors.rs  fixed_size_memory_chunk.rs  index_vector_assignments.rs  lib.rs  local_id_registry.rs  memory_chunk.rs  memory_view.rs  row_major_chunk_manager.rs  topk.rs
crates/memchunk/src/chunks/: any_size_memory_chunk.rs  chunk_index.rs  chunk_manager.rs  chunk_vector.rs  fixed_size_memory_chunk.rs  index_vector_assignments.rs  mod.rs  row_major_chunk_manager.rs
crates/memchunk/src/utils/: id_registry.rs  mod.rs
crates/vecdb/: Cargo.toml
crates/vecdb/src/: lib.rs
examples/: fetch_vectors.rs  trivial.rs
src/: main.rs  vec_traits.rs  vecgen.rs
