[package]
name = "opencl-experiments"
version = "0.1.0"
edition = "2021"

[[example]]
name = "trivial"
path = "examples/trivial.rs"

[[example]]
name = "fetch_vectors"
path = "examples/fetch_vectors.rs"

[dependencies]
approx = "0.5.1"
fmmap = { version = "0.3.0", features = ["tokio", "tokio-async"] }
ocl = "0.19.4"
ocl-stream = "0.3.5"
rand = "0.8.5"
rand_xoshiro = "0.6.0"

[dev-dependencies]
byteorder = "1.4.3"
futures = "0.3.24"
indicatif = { version = "0.17.1", features = ["tokio"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "mysql"] }
tokio = { version = "1.21.1", features = ["full"] }
