[package]
name = "opencl-bf-search"
version = "0.1.0"
edition = "2021"

[[example]]
name = "trivial"
path = "examples/trivial.rs"

[dependencies]
approx = "0.5.1"
fmmap = { version = "0.3.2", features = ["tokio", "tokio-async"] }
ocl = "0.19.4"
ocl-stream = "0.3.5"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
tokio = { version = "1.23.1", features = ["full"] }
vecdb = { path = "../../crates/vecdb" }

[profile.release]
opt-level = 3
