[package]
name = "opencl-bf-search"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[[example]]
name = "trivial"
path = "examples/trivial.rs"

[[bench]]
name = "dot_products"
harness = false

[dependencies]
approx = "0.5.1"
fmmap = { version = "0.3.2", features = ["tokio", "tokio-async"] }
ocl = "0.19.4"
ocl-stream = "0.3.5"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
tokio = { version = "1.24.1", features = ["full"] }
memchunk = { path = "../../crates/memchunk" }
vecdb = { path = "../../crates/vecdb" }
clap = "4.1.1"
shellexpand = "3.0.0"
colored = "2.0.0"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["async_tokio"] }
