[package]
name = "opencl-bf-search"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[[example]]
name = "trivial"
path = "examples/trivial.rs"

[features]
# Enforces that chunk sizes are a power of two.
power-of-two-chunks = ["memchunk/power-of-two-chunks"]

[dependencies]
clap = "4.1.4"
colored = "2.0.0"
dot-products = { path = "../../crates/dot_products" }
fmmap = { version = "0.3.2", features = ["tokio", "tokio-async"] }
memchunk = { path = "../../crates/memchunk" }
ocl = "0.19.4"
ocl-stream = "0.3.5"
shellexpand = "3.0.0"
tokio = { version = "1.24.2", features = ["full"] }
vecdb = { path = "../../crates/vecdb" }

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.4.0", features = ["async_tokio"] }
