[package]
name = "dot-products"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "reference_dot_products"
harness = false

[dependencies]
abstractions = { path = "../../crates/abstractions" }
rayon = "1.6.1"
unroll = "0.1.5"

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.4.0", features = ["async_tokio"] }
memchunk = { path = "../../crates/memchunk" }
tokio = { version = "1.24.2", features = ["full"] }
vecdb = { path = "../../crates/vecdb" }
