[package]
name = "memchunk"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[features]
# Enforces that chunk sizes are a power of two.
power-of-two-chunks = []
# Disables pessimistic checks in certain locations.
optimistic = []

[dependencies]
abstractions = { path = "../../crates/abstractions" }
alloc-madvise = { version = "0.3.0", default-features = false }
rayon = "1.6.1"
thiserror = "1.0.38"
transpose = "0.2.2"
unroll = "0.1.5"
